# Image-Process-Sequential-and-Parallel-

./: CMakeLists.txt  bmp.cpp  bmp.h  main.cpp
Arqui2020-main/: CMakeLists.txt  bmp.h  main.cpp  test
img-par/src/: bmp.cpp  main.cpp  makefile  parallel
img-par/test/: test-bmp.cpp
img-seq/: README.md
img-seq/src/: bmp.cpp  makefile  sequential
src/: CMakeLists.txt  a.out  bmp.cpp  bmp.h  main.cpp
test/: CMakeLists.txt  main.cpp
